# logitech-switcher

./: README.md  mouse-switcher.sh  pyproject.toml
project_py/: main.py
